--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
       <script src="js/respond.min.js"></script>
     <![endif]-->
     <style>
-      body{
-        padding-top: 70px;
+      body {
+        padding-top: 50px;
+      }
+
+      .carousel {
+        height: 500px;
+        background-color: #000;
+      }
+
+      .carousel .item {
+        height: 500px;
+        background-color: #000;
+      }
+
+      .carousel img {
+        width: 100%;
+      }
+
+      .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 20px;
+        line-height: 1.8;
       }
     </style>
   </head>
@@ -52,6 +72,76 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/chrome-big.jpg" alt="1 slide">
+        <div class="carousel-caption">
+          <h1>Chrome</h1>
+          <p>Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
+          <p><a class="btn btn-lg btn-primary" href="http://www.google.cn/intl/zh-CN/chrome/browser/"
+                          role="button" target="_blank">点我下载</a></p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/firefox-big.jpg" alt="2 slide">
+        <div class="carousel-caption">
+          <h1>Firefox</h1>
+          <p>Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器。</p>
+          <p><a class="btn btn-lg btn-primary" href="http://www.firefox.com.cn/download/" target="_blank"
+                          role="button">点我下载</a></p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/safari-big.jpg" alt="3 slide">
+        <div class="carousel-caption">
+          <h1>Safari</h1>
+          <p>Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器。</p>
+          <p><a class="btn btn-lg btn-primary" href="http://www.apple.com/cn/safari/" target="_blank"
+                          role="button">点我下载</a></p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/opera-big.jpg" alt="4 slide">
+        <div class="carousel-caption">
+          <h1>Opera</h1>
+          <p>Opera浏览器，是一款挪威Opera Software ASA公司制作的支持多页面标签式浏览的网络浏览器。</p>
+          <p><a class="btn btn-lg btn-primary" href="http://www.opera.com/zh-cn" target="_blank"
+                          role="button">点我下载</a></p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/ie-big.jpg" alt="5 slide">
+        <div class="carousel-caption">
+          <h1>IE</h1>
+          <p>Internet Explorer，简称 IE，是微软公司推出的一款网页浏览器。</p>
+          <p><a class="btn btn-lg btn-primary" href="http://ie.microsoft.com/" target="_blank"
+                          role="button">点我下载</a></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">上一页</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">下一页</span>
+    </a>
+  </div>
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
