--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <style>
       body {
         padding-top: 50px;
+        padding-bottom: 50px;
       }
 
       .carousel {
@@ -67,7 +68,7 @@
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -77,21 +78,21 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="demo-navbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">综述 <span class="sr-only">(current)</span></a></li>
           <li><a href="#">简述</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">特点 <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Chorme</a></li>
-              <li><a href="#">Firefox</a></li>
-              <li><a href="#">Safari</a></li>
-              <li><a href="#">Opera</a></li>
-              <li><a href="#">IE</a></li>
+              <li><a href="#feature-tab" data-tab="tab-chrome">Chrome</a></li>
+              <li><a href="#feature-tab" data-tab="tab-firefox">Firefox</a></li>
+              <li><a href="#feature-tab" data-tab="tab-safari">Safari</a></li>
+              <li><a href="#feature-tab" data-tab="tab-opera">Opera</a></li>
+              <li><a href="#feature-tab" data-tab="tab-ie">IE</a></li>
             </ul>  
           </li> 
-          <li><a href="#">关于</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#myModal">关于</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -203,7 +204,7 @@
     <div role="tabpanel">
 
       <!-- Nav tabs -->
-      <ul class="nav nav-tabs" role="tablist">
+      <ul class="nav nav-tabs" role="tablist" id="feature-tab">
         <li role="presentation" class="active"><a href="#tab-chrome" aria-controls="tab-chrome" role="tab" data-toggle="tab">Chrome</a></li>
         <li role="presentation"><a href="#tab-firefox" aria-controls="tab-firefox" role="tab" data-toggle="tab">Firefox</a></li>
         <li role="presentation"><a href="#tab-safari" aria-controls="tab-safari" role="tab" data-toggle="tab">Safari</a></li>
@@ -293,11 +294,51 @@
             </div>
         </div>
       </div>
-
     </div>
+
+    <hr class="=divider">
+
+    <footer>
+      <p class="pull-right"><a href="#top">回到顶部</a></p>
+      <p>@ 2014  慕课网</p>
+    </footer>
   </div>
+
+  <div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">关于</h4>
+        </div>
+        <div class="modal-body">
+          <p>慕课网隶属于北京慕课科技中心(有限合伙)，是一家从事互联网免费教学的网络教育公司。秉承“开拓、创新、公平、分享”的精神，
+                        将互联网特性全面的应用在教育领域，致力于为教育机构及求学者打造一站式互动在线教育品牌。</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">了解了</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+      $("#demo-navbar .dropdown-menu a").click(function(e) {
+        var href = $(this).attr("href");
+        var tabId = $(this).attr('data-tab');
+
+        if ('#' !== href) {
+          e.preventDefault();
+          $(document).scrollTop($(href).offset().top - 70);
+          if (tabId) {
+            $("#feature-tab a[href='#" + tabId + "']").tab("show");
+          } 
+        }  
+      });
+    });
+    </script>
   </body>
 </html>
